modularization: sample, draw.. but sampling is too slow, do to avoidung collisions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8.9)
-project (rand_sample_store)
+project (sample)
+project (nointerpretation)
 find_package(OpenCV)
 #Bring the headers, such as Student.h into the project
 include_directories(include)
@@ -10,6 +11,8 @@ include_directories(include)
 #However, the file(GLOB...) allows for wildcard additions:
 file(GLOB SOURCES "source/*.cpp")
 
-add_executable(rand_sample_store ${SOURCES})
-target_link_libraries( rand_sample_store ${OpenCV_LIBS} )
+add_executable(nointerpretation source/pixel.cpp source/rsf_writer.cpp source/txt_to_draw.cpp)
+target_link_libraries( nointerpretation ${OpenCV_LIBS} )
 
+add_executable(sample source/pixel.cpp source/rsf_writer.cpp source/sample_random.cpp)
+target_link_libraries( sample ${OpenCV_LIBS} )
