tidy up.. vid to txt works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8.9)
-project (sample)
+project (sample_pic)
+project (sample_vid)
 project (nointerpretation)
 project (distanceinterpretation)
 find_package(OpenCV)
@@ -18,5 +19,8 @@ target_link_libraries( nointerpretation ${OpenCV_LIBS} )
 add_executable(distanceinterpretation source/pixel.cpp source/rsf_writer.cpp source/txt_to_dist_draw3.cpp)
 target_link_libraries( distanceinterpretation ${OpenCV_LIBS} )
 
-add_executable(sample source/pixel.cpp source/rsf_writer.cpp source/sample_random.cpp)
-target_link_libraries( sample ${OpenCV_LIBS} )
+add_executable(sample_pic source/pixel.cpp source/rsf_writer.cpp source/sample_random_pic.cpp)
+target_link_libraries( sample_pic ${OpenCV_LIBS} )
+
+add_executable(sample_vid source/pixel.cpp source/rsf_writer.cpp source/sample_random_vid.cpp)
+target_link_libraries( sample_vid ${OpenCV_LIBS} )
