makes videos, with always the same random pattern possible

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8.9)
 project (sample_pic)
 project (sample_vid)
+project (sample_vid_c)
 project (nointerpretation)
 project (nointerpretation_vid)
 project (distanceinterpretation)
@@ -29,6 +30,9 @@ target_link_libraries( sample_pic ${OpenCV_LIBS} )
 
 add_executable(sample_vid source/pixel.cpp source/rsf_writer.cpp source/sample_random_vid.cpp)
 target_link_libraries( sample_vid ${OpenCV_LIBS} )
+
+add_executable(sample_vid_c source/pixel.cpp source/rsf_writer.cpp source/sample_random_vid_s_pat.cpp)
+target_link_libraries( sample_vid_c ${OpenCV_LIBS} )
 
 add_executable(distanceinterpretation_vid source/pixel.cpp source/rsf_writer.cpp source/txts_to_dist_vid.cpp)
 target_link_libraries( distanceinterpretation_vid ${OpenCV_LIBS} )
